Name:           hscope
Version:        0.2
License:        BSD3
License-File:   COPYING
Category:       source-tools
Synopsis:       cscope like browser for Haskell code
Description:
    hscope is a partial cscope line oriented mode reimplementation for Haskell code.

    Currently it supports finding the definition and callers of the function, types.
    Also works searching for files and in files.
    
    See hscope --help for available options.

    Being cscope-compatible gives Vim integration for free. Use :set cscopeprg
    to configure hscope as cscope replacement for haskell files.

Cabal-Version:  >= 1.10
Build-Type:     Simple
Author:         Boris Sukholitko <boriss@gmail.com>
Copyright:      Boris Sukholitko <boriss@gmail.com>
Maintainer:     Boris Sukholitko <boriss@gmail.com>
homepage:       https://github.com/bosu/hscope
Stability:      Experimental
Extra-Source-Files:
    t/files/Arrow.hs
    t/files/Fixity.hs
    t/files/a/c.h
    t/files/a/a.h
    t/files/b/b.h
    t/files/CPP2.hs
    t/files/garrs.hs
    t/files/Simple.hs
    t/files/CPP.hs
    t/files/a.c

Executable hscope
    Main-Is: HScope.hs
    GHC-Options: -Wall
    Build-Depends: base (< 5), hs-cdb, haskell-src-exts, mtl, uniplate, cereal
                             , vector, bytestring, process, directory, cpphs
    Default-Language: Haskell2010

test-suite Build
    type:            exitcode-stdio-1.0
    build-depends:   base, test-simple, process, directory, Unixutils, mtl
    ghc-options:     -Wall
    hs-source-dirs:  t
    main-is:         Build.hs
    Default-Language: Haskell2010

